--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do App</title>
+  <link rel="icon" href="icons/image_icon.png">
   <style>
     :root {
       --bg: #1a1a1a;
