--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
   </div>
 
   <script>
-    const API = "http://localhost:8080";
+    const API = "https://your-backend.onrender.com";
+
 
     async function fetchTodos() {
       const res = await fetch(API + "/");
