--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do App</title>
-  <link rel="icon" href="icons/image_icon.png">
+  <link rel="icon" href="image_icon.png">
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
 
