--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </div>
 
   <script>
-  const API ="https://todo-app-using-go.onrender.com";
+  const API ="https://todo-app-using-go.onrender.com/api";
 
 async function fetchTodos() {
   try {
