--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --bg: #1a1a1a;
       --card: #1e1e1e;
       --text: #e0e0e0;
-      --accent: #000000; /* gold */
+      --accent: #fff700; /* gold */
       --shadow-light: rgba(255, 255, 255, 0.05);
       --shadow-dark: rgba(0, 0, 0, 0.6);
     }
