--- a/index.html
+++ b/index.html
@@ -173,78 +173,95 @@
   </div>
 
   <script>
-  const API ="https://todo-app-using-go.onrender.com/api";
+  const base = "https://todo-using-go.onrender.com/api";
 
-async function fetchTodos() {
-  try {
-    const res = await fetch(API + "/");
-    const data = await res.json();
-    const todos = data.todos || [];
-    const container = document.getElementById("todoList");
-    container.innerHTML = "";
+  const list = document.getElementById("todo-list");
+  const form = document.getElementById("todo-form");
+  const input = document.getElementById("todo-input");
 
-    todos.forEach(todo => {
-      const card = document.createElement("div");
-      card.className = "todo-card neumorphic" + (todo.done ? " done" : "");
-
-      const titleEl = document.createElement("div");
-      titleEl.className = "todo-title";
-      titleEl.textContent = todo.title;
-      titleEl.contentEditable = true;
-      titleEl.onblur = () => updateTitle(todo.id, titleEl.textContent);
-
-      const checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.checked = todo.done;
-      checkbox.onchange = () => toggleDone(todo.id, !todo.done);
-
-      const left = document.createElement("div");
-      left.className = "todo-left";
-      left.appendChild(checkbox);
-      left.appendChild(titleEl);
-
-      const delBtn = document.createElement("button");
-      delBtn.className = "delete-btn";
-      delBtn.textContent = "✕";
-      delBtn.onclick = () => deleteTodo(todo.id);
-
-      card.appendChild(left);
-      card.appendChild(delBtn);
-      container.appendChild(card);
-    });
-  } catch (err) {
-    console.error("❌ Failed to fetch todos:", err);
+  async function fetchTodos() {
+    const res = await fetch(base + "/");
+    const todos = await res.json();
+    list.innerHTML = "";
+    todos.forEach(addTodoToDOM);
   }
-}
 
-function addTodo() {
-  const input = document.getElementById("titleInput");
-  const title = input.value.trim();
-  if (!title) return;
-  fetch(API, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ title })
-  })
-    .then(res => res.json())
-    .then(() => {
-      input.value = "";
-      fetchTodos();
-    })
-    .catch(err => console.error("❌ Failed to add todo:", err));
-}
+  function addTodoToDOM(todo) {
+    const li = document.createElement("li");
+    li.className = "todo-item";
 
-// Register service worker (fix path)
+    const checkbox = document.createElement("input");
+    checkbox.type = "checkbox";
+    checkbox.checked = todo.Done;
+    checkbox.addEventListener("change", () => toggleDone(todo.ID, !todo.Done));
+
+    const title = document.createElement("span");
+    title.textContent = todo.Title;
+    title.className = todo.Done ? "done" : "";
+    title.contentEditable = true;
+    title.addEventListener("blur", () => updateTitle(todo.ID, title.textContent));
+
+    const del = document.createElement("button");
+    del.textContent = "❌";
+    del.className = "delete-btn";
+    del.addEventListener("click", () => deleteTodo(todo.ID));
+
+    li.appendChild(checkbox);
+    li.appendChild(title);
+    li.appendChild(del);
+    list.appendChild(li);
+  }
+
+  async function addTodo(e) {
+    e.preventDefault();
+    const title = input.value.trim();
+    if (!title) return;
+
+    const res = await fetch(base + "/", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ title })
+    });
+
+    const newTodo = await res.json();
+    addTodoToDOM(newTodo);
+    input.value = "";
+  }
+
+  async function deleteTodo(id) {
+    await fetch(base + "/" + id, { method: "DELETE" });
+    fetchTodos();
+  }
+
+  async function toggleDone(id, done) {
+    await fetch(base + "/" + id, {
+      method: "PUT",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ done })
+    });
+    fetchTodos();
+  }
+
+  async function updateTitle(id, title) {
+    await fetch(base + "/" + id, {
+      method: "PUT",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ title })
+    });
+    fetchTodos();
+  }
+
+  form.addEventListener("submit", addTodo);
+  window.addEventListener("load", fetchTodos);
 
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker
-      .register('sw.js')
-      .then(reg => console.log("SW registered", reg))
-      .catch(err => console.error("SW registration failed", err));
-  }
+  navigator.serviceWorker.register('sw.js')
+    .then(reg => console.log("✅ Service Worker registered:", reg.scope))
+    .catch(err => console.error("❌ Service Worker registration failed:", err));
+}
 
+</script>
 
-  </script>
 
 </body>
 </html>
