--- a/index.html
+++ b/index.html
@@ -7,9 +7,161 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" sizes="192x192"/>
   <meta name="theme-color" content="#FFD700" />
+
+    <style>
+    :root {
+      --bg: #1a1a1a;
+      --card: #1e1e1e;
+      --text: #e0e0e0;
+      --accent: #ffd700; /* gold */
+      --shadow-light: rgba(255, 255, 255, 0.05);
+      --shadow-dark: rgba(0, 0, 0, 0.6);
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+      background-color: var(--bg);
+      background-image: radial-gradient(#2c2c2c 1px, transparent 1px);
+      background-size: 20px 20px;
+      color: var(--text);
+      padding: 2rem;
+    }
+
+    h1 {
+      text-align: center;
+      color: var(--accent);
+      margin-bottom: 2rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .neumorphic {
+      background: var(--card);
+      border-radius: 12px;
+      box-shadow:
+        6px 6px 12px var(--shadow-dark),
+        -6px -6px 12px var(--shadow-light);
+      border: none;
+      outline: none;
+    }
+
+    .todo-input {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 1.5rem;
+    }
+
+    input[type="text"] {
+      flex: 1;
+      padding: 12px;
+      font-size: 16px;
+      background: var(--card);
+      color: var(--text);
+      border-radius: 10px;
+      font-family: inherit;
+    }
+
+    input[type="text"]::placeholder {
+      color: #777;
+    }
+
+    button {
+      padding: 12px 16px;
+      font-size: 16px;
+      background: var(--card);
+      color: var(--accent);
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 10px;
+      transition: 0.2s ease;
+      font-family: inherit;
+    }
+
+    button:hover {
+      box-shadow:
+        inset 4px 4px 8px var(--shadow-dark),
+        inset -4px -4px 8px var(--shadow-light);
+    }
+
+    .todo-list {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    .todo-card {
+      padding: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .todo-card.done .todo-title {
+      text-decoration: line-through;
+      color: #777;
+    }
+
+    .todo-left {
+      flex: 1;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+
+    input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      accent-color: var(--accent);
+      cursor: pointer;
+    }
+
+    .todo-title {
+      font-size: 16px;
+      flex: 1;
+      font-family: inherit;
+    }
+
+    .todo-title[contenteditable="true"] {
+      border-bottom: 1px dashed #555;
+      outline: none;
+    }
+
+    .delete-btn {
+      background: var(--card);
+      color: #ff4c4c;
+      font-size: 16px;
+      padding: 8px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      border: none;
+      box-shadow: 4px 4px 8px var(--shadow-dark),
+                  -4px -4px 8px var(--shadow-light);
+      transition: all 0.2s ease;
+      font-family: inherit;
+    }
+
+    .delete-btn:hover {
+      background: #ff4c4c;
+      color: #fff;
+      box-shadow: inset 2px 2px 6px var(--shadow-dark),
+                  inset -2px -2px 6px var(--shadow-light);
+    }
+  </style>
   <!-- ... your style stays the same ... -->
 </head>
 <body>
+  
 
   <h1>ToDo App</h1>
   <div class="container">
@@ -25,7 +177,7 @@
   </div>
 
   <script>
-    const base = "https://todo-using-go.onrender.com/api";
+    const base = "https:  //todo-using-go.onrender.com/api";
 
     const list = document.getElementById("todo-list");
     const form = document.getElementById("todo-form");
